--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,14 @@ services:
       - 3000:3000
     volumes:
       - grafana:/var/lib/grafana
+      - grafana-plugins:/var/lib/grafana/plugins
+      - type: bind
+        source: ./config/grafana.ini
+        target: /etc/grafana/grafana.ini
+
     restart: always
+    environment:
+      - GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS=grafana-mqtt-datasource
 
   influxdb:
     image: influxdb:latest
@@ -27,5 +34,6 @@ services:
 
 volumes:
   grafana:
+  grafana-plugins:
   influxdb-storage:
   influxdb-config:
