--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,11 @@ idna==3.3
 influxdb-client==1.28.0
 pyserial==3.5
 python-dateutil==2.8.2
+python-dotenv==0.20.0
 pytz==2022.1
 PyYAML==6.0
 requests==2.27.1
 Rx==3.2.0
 six==1.16.0
 urllib3==1.26.9
+websockets==10.3
