--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,9 @@ services:
       - type: bind
         source: ./provisioning
         target: /etc/grafana/provisioning
+      - type: bind
+        source: ./dashboards
+        target: /var/lib/grafana/dashboards
     depends_on:
       - influxdb
 
@@ -25,7 +28,6 @@ services:
       - INFLUX_TOKEN=${INFLUX_TOKEN}
       - INFLUX_ORG=${INFLUX_ORG}
       - INFLUX_BUCKET=${INFLUX_BUCKET}
-      - INFLUX_DATASOURCE_UID=${INFLUX_DATASOURCE_UID}
 
   influxdb:
     image: influxdb:latest
