--- a/requirements.txt
+++ b/requirements.txt
@@ -8,25 +8,19 @@ certifi==2021.10.8
 charset-normalizer==2.0.12
 click==8.1.3
 colorama==0.4.5
-contourpy==1.0.7
 coverage==6.5.0
-cycler==0.11.0
 diskcache==5.4.0
 Flask==2.3.2
-fonttools==4.38.0
 idna==3.3
 influxdb-client==1.28.0
 iniconfig==1.1.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
-kiwisolver==1.4.4
 MarkupSafe==2.1.2
-matplotlib==3.6.3
 msgpack==1.0.5
-numpy==1.24.1
 packaging==21.3
-Pillow==9.4.0
 pluggy==1.0.0
+prettytable==3.8.0
 py==1.11.0
 pycodestyle==2.10.0
 pyparsing==3.0.9
@@ -47,6 +41,7 @@ textparser==0.24.0
 tomli==2.0.1
 typing_extensions==4.4.0
 urllib3==1.26.9
-websockets==11.0.3
+wcwidth==0.2.6
+websockets==10.3
 Werkzeug==2.3.4
 wrapt==1.14.1
