Rename examples/ folder to templates/

--- a/templates/template_dotenv.env
+++ b/templates/template_dotenv.env
@@ -3,17 +3,22 @@
 GRAFANA_ADMIN_USERNAME=""
 GRAFANA_ADMIN_PASSWORD=""
 
-GRAFANA_URL=http://localhost:3000/
-
 # InfluxDB environment variables
 
 INFLUX_ADMIN_USERNAME=""
 INFLUX_ADMIN_PASSWORD=""
 
-INFLUX_URL=http://localhost:8086/
+INFLUX_ORG="UBC Solar"
 
-INFLUX_ORG=UBC Solar
-INFLUX_BUCKET=""
+# used to store random data for debugging purposes
+INFLUX_DEBUG_BUCKET="Test"
+
+# used to store real data from the car
+INFLUX_PROD_BUCKET="Telemetry"
+
+# Parser secret key
+
+SECRET_KEY=""
 
 # Access tokens
 
