Implement new telemetry parser server (#44)
* Add parser Dockerfile and docker compose entry

* Fix requirements file

* Add initial listening parser

* Add volume binding for parser container

* Alter implementation of StandardFrame

* Simplify link_telemetry.py script

* Move InfluxDB write to separate thread

* Add /health endpoint

* Remove dependency between parser and other containers

This allows starting the parser application without starting the Influx and Grafana containers

* Change return string for /health checkpoint

* Remove stream flag

* Move entire measurement dict into queue instead of single InfluxDB point

* Add --version argument to link_telemetry

* Add check-health handler in link_telemetry.py

* Format parsed response as a table

* Add Measurement dataclass and add documentation

* Add API_PREFIX to parser endpoints

* Add handler for when the source of a CAN message is unknown

* Add no-write parsing endpoint

* Remove /ping endpoint and improve /health endpoint response

* Add support for new /health endpoint response

* Move EXPECTED_CAN_MSG_LENGTH constant out of StandardFrame class

* Display hex id in returned measurement table

* Add configuration confirmation before starting execution

* Improve formatting

* Add extract_measurements_dict() function for test framework compatibility

* Update test framework to work with new StandardFrame constructor

* Add TODO comment

* Wrap POST request with try-except

* Handle the INFLUX_WRITE_FAIL case

* Move InfluxDB write to main request thread and bound size of queue

* Remove unnecessary imports

* Rename --check-health to --health

* Refactor some code into separate functions

* Improve some log messages

* Add support for writing to either debug or production Influx bucket

* Improve CLI argument structure for link_telemetry

* Fix versions for Influx and Docker

* Fix argument validation bug

* Remove old en

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   grafana:
-    image: grafana/grafana-oss
+    image: grafana/grafana-oss:9.5.2
     container_name: grafana
     ports:
       - 3000:3000
@@ -27,10 +27,19 @@ services:
       - INFLUX_ADMIN_PASSWORD=${INFLUX_ADMIN_PASSWORD}
       - INFLUX_TOKEN=${INFLUX_TOKEN}
       - INFLUX_ORG=${INFLUX_ORG}
-      - INFLUX_BUCKET=${INFLUX_BUCKET}
+      - INFLUX_BUCKET=${INFLUX_PROD_BUCKET}
+
+  parser:
+    build: .
+    container_name: parser
+    volumes:
+      - .:/link_telemetry
+    ports:
+      - 5000:5000
+    restart: always
 
   influxdb:
-    image: influxdb:latest
+    image: influxdb:2.7.1
     container_name: influxdb
     ports:
       - 8086:8086
@@ -42,7 +51,7 @@ services:
       - DOCKER_INFLUXDB_INIT_USERNAME=${INFLUX_ADMIN_USERNAME}
       - DOCKER_INFLUXDB_INIT_PASSWORD=${INFLUX_ADMIN_PASSWORD}
       - DOCKER_INFLUXDB_INIT_ORG=${INFLUX_ORG}
-      - DOCKER_INFLUXDB_INIT_BUCKET=${INFLUX_BUCKET}
+      - DOCKER_INFLUXDB_INIT_BUCKET=${INFLUX_PROD_BUCKET}
     restart: always
 
 volumes:
