--- a/provisioning/dashboards/release_telemetry_dash.yaml
+++ b/provisioning/dashboards/release_telemetry_dash.yaml
@@ -19,7 +19,7 @@ providers:
     allowUiUpdates: true
     options:
       # <string, required> path to dashboard files on disk. Required when using the 'file' type
-      path: /var/lib/grafana/dashboards
+      path: '/var/lib/grafana/dashboards'
       # <bool> use folder names from filesystem to create folders in Grafana
       foldersFromFilesStructure: true
 
