testing new script

--- a/templates/template_dotenv.env
+++ b/templates/template_dotenv.env
@@ -10,11 +10,14 @@ INFLUX_ADMIN_PASSWORD=""
 
 INFLUX_ORG="UBC Solar"
 
+# List using comma delimiter for what messages are avaliable
+MESSAGE_TYPES = "CAN,GPS,IMU"
+
 # used to store random data for debugging purposes
-INFLUX_DEBUG_BUCKET="Test"
+INFLUX_DEBUG_BUCKET="_test"
 
 # used to store real data from the car
-INFLUX_PROD_BUCKET="Telemetry"
+INFLUX_PROD_BUCKET="_prod"
 
 # Parser secret key
 
