--- a/templates/template_dotenv.env
+++ b/templates/template_dotenv.env
@@ -14,10 +14,10 @@ INFLUX_ORG="UBC Solar"
 MESSAGE_TYPES="CAN,GPS,IMU"
 
 # used to store random data for debugging purposes
-INFLUX_DEBUG_BUCKET="_test"
+INFLUX_DEBUG_BUCKET="Test"
 
 # used to store real data from the car
-INFLUX_PROD_BUCKET="_prod"
+INFLUX_PROD_BUCKET="Telemetry"
 
 # Parser secret key
 
