added DS to .env template

--- a/templates/template_dotenv.env
+++ b/templates/template_dotenv.env
@@ -16,6 +16,8 @@ INFLUX_DEBUG_BUCKET="Test"
 # used to store real data from the car
 INFLUX_PROD_BUCKET="Telemetry"
 
+DS_INFLUXDB="o2uhkwje8832ha"
+
 # Parser secret key
 
 SECRET_KEY=""
