--- a/templates/template_dotenv.env
+++ b/templates/template_dotenv.env
@@ -10,6 +10,8 @@ INFLUX_ADMIN_PASSWORD=""
 
 INFLUX_ORG="UBC Solar"
 
+MESSAGE_TYPES="CAN,GPS,IMU"
+
 # used to store random data for debugging purposes
 INFLUX_DEBUG_BUCKET="Test"
 
