Updated dotenv tempate

--- a/templates/template_dotenv.env
+++ b/templates/template_dotenv.env
@@ -11,10 +11,10 @@ INFLUX_ADMIN_PASSWORD=""
 INFLUX_ORG="UBC Solar"
 
 # used to store random data for debugging purposes
-INFLUX_DEBUG_BUCKET="Test"
+INFLUX_DEBUG_BUCKET="Debug"
 
 # used to store real data from the car
-INFLUX_PROD_BUCKET="Telemetry"
+INFLUX_CAN_BUCKET="CAN"
 
 # Parser secret key
 
