--- a/templates/template_dotenv.env
+++ b/templates/template_dotenv.env
@@ -10,11 +10,15 @@ INFLUX_ADMIN_PASSWORD=""
 
 INFLUX_ORG="UBC Solar"
 
+MESSAGE_TYPES="CAN,GPS,IMU"
+
 # used to store random data for debugging purposes
 INFLUX_DEBUG_BUCKET="Debug"
 
 # used to store real data from the car
 INFLUX_CAN_BUCKET="CAN"
+
+DS_INFLUXDB="o2uhkwje8832ha"
 
 # Parser secret key
 
