--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,6 @@
 version: "3.9"
 services:
+  
   grafana:
     image: grafana/grafana-oss:9.5.2
     container_name: grafana
@@ -18,7 +19,6 @@ services:
         target: /var/lib/grafana/dashboards
     depends_on:
       - influxdb
-
     restart: always
     environment:
       - GF_SECURITY_ADMIN_USER=${GRAFANA_ADMIN_USERNAME}
@@ -29,6 +29,7 @@ services:
       - INFLUX_ORG=${INFLUX_ORG}
       - INFLUX_BUCKET=${INFLUX_CAN_BUCKET}
       - DS_INFLUXDB=${DS_INFLUXDB}
+  
   parser:
     build: .
     container_name: parser
@@ -37,7 +38,7 @@ services:
     ports:
       - 127.0.0.1:5001:5000
     restart: always
-
+  
   influxdb:
     image: influxdb:2.7.1
     container_name: influxdb
@@ -57,7 +58,6 @@ services:
       - DOCKER_INFLUXDB_INIT_BUCKET=${INFLUX_CAN_BUCKET}
       - INFLUX_DEBUG_BUCKET=${INFLUX_DEBUG_BUCKET}
       - DS_INFLUXDB=${DS_INFLUXDB}
-
     restart: always
 
   nginx:
@@ -70,10 +70,12 @@ services:
         source: ./nginx/nginx.conf
         target: /etc/nginx/nginx.conf
         read_only: true
-      
-    
-    
-    
+    restart: always
+  
+  certbot:
+    image: certbot/certbot
+    restart: always
+
 volumes:
   grafana:
   influxdb-storage:
