--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 argparse-addons==0.8.0
 attrs==22.1.0
 autopep8==2.0.1
+beautifultable==1.1.0
 bitstruct==8.15.1
 blinker==1.6.2
 cantools==37.2.0
@@ -9,6 +10,7 @@ charset-normalizer==2.0.12
 click==8.1.3
 colorama==0.4.5
 coverage==6.5.0
+DateTime==5.4
 diskcache==5.4.0
 Flask==2.3.2
 Flask-HTTPAuth==4.8.0
@@ -19,6 +21,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
 msgpack==1.0.5
+numpy==1.26.4
 packaging==21.3
 pluggy==1.0.0
 prettytable==3.8.0
@@ -47,5 +50,4 @@ wcwidth==0.2.6
 websockets==11.0.3
 Werkzeug==2.3.4
 wrapt==1.14.1
-numpy
-datetime
+zope.interface==6.2
