--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,8 @@ services:
       - 80:80
       - 443:443
     volumes:
+#      - ./certbot/conf:/etc/nginx/ssl/:ro
+      - ./certbot/www:/var/www/certbot/:ro
       - type: bind
         source: ./nginx/nginx.conf
         target: /etc/nginx/nginx.conf
@@ -16,8 +18,11 @@ services:
   
   certbot:
     image: certbot/certbot
+    volumes: 
+      - ./certbot/conf:/etc/letsencrypt/:rw
+      - ./certbot/www:/var/www/certbot/:rw
+    command: certonly --webroot -w /var/www/certbot --force-renewal --email software@ubcsolar.com -d telemetry.ubcsolar.com --agree-tos
     restart: always
-
   
   grafana:
     image: grafana/grafana-oss:9.5.2
@@ -50,6 +55,7 @@ services:
       - DS_INFLUXDB=${DS_INFLUXDB}
   
   parser:
+    init: true
     build: .
     container_name: parser
     volumes:
