--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,6 +23,8 @@ http {
     ##
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3; # Dropping SSLv3, ref: POODLE
     ssl_prefer_server_ciphers on;
+#    include /etc/letsencrypt/options-ssl-nginx.conf;
+#    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
     ##
     # Logging Settings
     ##
@@ -38,91 +40,71 @@ http {
     # gzip_buffers 16 8k;
     # gzip_http_version 1.1;
     # gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
-# server {
-#     listen 443 ssl;
-#     server_name grafana.telemetry.ubcsolar.com;
-#     location / {
-#         proxy_pass http://localhost:3000;
-#         proxy_set_header Host $host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header X-Forwarded-Proto $scheme;
-#     }
-# }
-# server {
-#     listen 443 ssl;
-#     server_name influxdb.telemetry.ubcsolar.com;
-#     location / {
-#         proxy_pass http://localhost:8086;
-#         proxy_set_header Host $host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header X-Forwarded-Proto $scheme;
-#     }
-# }
 
-server {
-    listen 80;
-    listen [::]:80;
-    
-    server_name influxdb.telemetry.ubcsolar.com;
-    
-    location / {
-        proxy_pass http://influxdb:8086/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+    server {
+        listen 80;
+        listen [::]:80;
+        
+        server_name influxdb.telemetry.ubcsolar.com;
+        
+        location / {
+            proxy_pass http://influxdb:8086/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
     }
-}
 
-server {
-    listen 80;
-    listen [::]:80;
-    
-    server_name telemetry.ubcsolar.com;
-    
-    location / {
-        proxy_pass http://grafana:3000/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+    server {
+        listen 80;
+        listen [::]:80;
+        
+        server_name telemetry.ubcsolar.com;
+        server_tokens off; 
+        
+        location / {
+            proxy_pass http://grafana:3000/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
     }
-}
 
-server {
-    listen 80;
-    listen [::]:80;
-    
-    server_name grafana.telemetry.ubcsolar.com;
-    
-    location / {
-        proxy_pass http://grafana:3000/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+    server {
+        listen 80;
+        listen [::]:80;
+        
+        server_name grafana.telemetry.ubcsolar.com;
+        
+        location / {
+            proxy_pass http://grafana:3000/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
     }
-}
 
-server {
-    listen 80;
-    listen [::]:80;
-    
-    server_name parser.telemetry.ubcsolar.com;
-    
-    location / {
-        proxy_pass http://parser:5000/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+    server {
+        listen 80;
+        listen [::]:80;
+        
+        server_name parser.telemetry.ubcsolar.com;
+        
+        location / {
+            proxy_pass http://parser:5000/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
     }
-}
     ##
     # Virtual Host Configs
     ##
     include /etc/nginx/conf.d/*.conf;
     include /etc/nginx/sites-enabled/*;
+    
 }
