--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,7 +27,7 @@ services:
             - INFLUX_ADMIN_PASSWORD=${INFLUX_ADMIN_PASSWORD}
             - INFLUX_TOKEN=${INFLUX_TOKEN}
             - INFLUX_ORG=${INFLUX_ORG}
-            - INFLUX_BUCKET=${INFLUX_PROD_BUCKET}
+            - INFLUX_BUCKET=${INFLUX_INIT_BUCKET}
 
     parser:
         build: .
@@ -54,7 +54,7 @@ services:
             - DOCKER_INFLUXDB_INIT_USERNAME=${INFLUX_ADMIN_USERNAME}
             - DOCKER_INFLUXDB_INIT_PASSWORD=${INFLUX_ADMIN_PASSWORD}
             - DOCKER_INFLUXDB_INIT_ORG=${INFLUX_ORG}
-            - DOCKER_INFLUXDB_INIT_BUCKET=${INFLUX_PROD_BUCKET}
+            - DOCKER_INFLUXDB_INIT_BUCKET=${INFLUX_INIT_BUCKET}
             - INFLUX_DEBUG_BUCKET=${INFLUX_DEBUG_BUCKET}
         restart: always
 
