--- a/templates/template_dotenv.env
+++ b/templates/template_dotenv.env
@@ -12,11 +12,9 @@ INFLUX_ORG="UBC Solar"
 
 MESSAGE_TYPES="CAN,GPS,IMU"
 
-# used to store random data for debugging purposes
-INFLUX_DEBUG_BUCKET="Debug"
-
-# used to store real data from the car
-INFLUX_CAN_BUCKET="CAN"
+# Needed to Initialize InfluxDB
+INFLUX_INIT_BUCKET="Init_test"
+INFLUX_DEBUG_BUCKET="CAN_test"
 
 DS_INFLUXDB="o2uhkwje8832ha"
 
