--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
+annotated-types==0.7.0
 argparse-addons==0.8.0
 attrs==22.1.0
 autopep8==2.0.1
 beautifultable==1.1.0
 bitstruct==8.15.1
 blinker==1.6.2
+canlib==1.25.393
 cantools==37.2.0
 certifi==2021.10.8
 charset-normalizer==2.0.12
@@ -27,6 +29,8 @@ pluggy==1.0.0
 prettytable==3.8.0
 py==1.11.0
 pycodestyle==2.10.0
+pydantic==2.7.1
+pydantic_core==2.18.2
 pyparsing==3.0.9
 pyserial==3.5
 pytest==7.1.3
@@ -44,7 +48,7 @@ six==1.16.0
 textparser==0.24.0
 toml==0.10.2
 tomli==2.0.1
-typing_extensions==4.4.0
+typing_extensions==4.11.0
 urllib3==1.26.9
 wcwidth==0.2.6
 websockets==11.0.3
