Fixed datasources and buckets of dashboards so they should show up automatically

--- a/templates/template_dotenv.env
+++ b/templates/template_dotenv.env
@@ -16,7 +16,8 @@ MESSAGE_TYPES="CAN,GPS,IMU"
 INFLUX_INIT_BUCKET="Init_test"
 INFLUX_DEBUG_BUCKET="CAN_test"
 
-DS_INFLUXDB="o2uhkwje8832ha"
+# Influx Datasource
+DS_INFLUXDB="P951FEA4DE68E13C5"
 
 # Parser secret key
 
