--- a/templates/template_dotenv.env
+++ b/templates/template_dotenv.env
@@ -16,8 +16,7 @@ MESSAGE_TYPES="CAN,GPS,IMU"
 INFLUX_INIT_BUCKET="Init_test"
 INFLUX_DEBUG_BUCKET="CAN_test"
 
-# Influx Datasource
-DS_INFLUXDB="P951FEA4DE68E13C5"
+DS_INFLUXDB="o2uhkwje8832ha"
 
 # Parser secret key
 
