Updated docker-compose and run_setup script

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -51,8 +51,7 @@ services:
       - INFLUX_ADMIN_PASSWORD=${INFLUX_ADMIN_PASSWORD}
       - INFLUX_TOKEN=${INFLUX_TOKEN}
       - INFLUX_ORG=${INFLUX_ORG}
-      - INFLUX_BUCKET=${INFLUX_CAN_BUCKET}
-      - DS_INFLUXDB=${DS_INFLUXDB}
+      - INFLUX_BUCKET=${INFLUX_INIT_BUCKET}
   
   parser:
     init: true
@@ -82,9 +81,8 @@ services:
       - DOCKER_INFLUXDB_INIT_USERNAME=${INFLUX_ADMIN_USERNAME}
       - DOCKER_INFLUXDB_INIT_PASSWORD=${INFLUX_ADMIN_PASSWORD}
       - DOCKER_INFLUXDB_INIT_ORG=${INFLUX_ORG}
-      - DOCKER_INFLUXDB_INIT_BUCKET=${INFLUX_CAN_BUCKET}
+      - DOCKER_INFLUXDB_INIT_BUCKET=${INFLUX_INIT_BUCKET}
       - INFLUX_DEBUG_BUCKET=${INFLUX_DEBUG_BUCKET}
-      - DS_INFLUXDB=${DS_INFLUXDB}
     depends_on:
       - nginx
     restart: always
