--- a/requirements.txt
+++ b/requirements.txt
@@ -17,13 +17,13 @@ diskcache==5.4.0
 Flask==2.3.2
 Flask-HTTPAuth==4.8.0
 idna==3.3
-influxdb-client==1.28.0
+influxdb-client==1.46.0
 iniconfig==1.1.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
 msgpack==1.0.5
-numpy==1.26.4
+numpy==2.0.1
 packaging==21.3
 pluggy==1.0.0
 prettytable==3.8.0
@@ -39,7 +39,7 @@ pytest-cover==3.0.0
 pytest-coverage==0.0
 python-can==4.0.0
 python-dateutil==2.8.2
-python-dotenv==0.20.0
+python-dotenv==1.0.1
 pytz==2022.1
 PyYAML==6.0.1
 requests==2.27.1
@@ -55,3 +55,5 @@ websockets==11.0.3
 Werkzeug==2.3.4
 wrapt==1.14.1
 zope.interface==6.2
+ubc-solar-data-tools==1.2.1
+tqdm==4.66.5
