--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ beautifultable==1.1.0
 bitstruct==8.15.1
 blinker==1.6.2
 canlib==1.25.393
-cantools==37.2.0
+cantools==38.0.2
 certifi==2021.10.8
 charset-normalizer==2.0.12
 click==8.1.3
@@ -17,7 +17,7 @@ diskcache==5.4.0
 Flask==2.3.2
 Flask-HTTPAuth==4.8.0
 idna==3.3
-influxdb-client==1.28.0
+influxdb-client==1.43.0
 iniconfig==1.1.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -55,3 +55,6 @@ websockets==11.0.3
 Werkzeug==2.3.4
 wrapt==1.14.1
 zope.interface==6.2
+grpcio==1.62
+grpcio-tools==1.62
+protobuf==4.25
