--- a/parser/requirements.txt
+++ b/parser/requirements.txt
@@ -56,5 +56,64 @@ Werkzeug==2.3.4
 wrapt==1.14.1
 zope.interface==6.2
 grpcio==1.62
-grpcio-tools==1.62
-protobuf==4.25
+protobuf==5.26.1
+(environment) electrical@elec-bay:~/sunlink$ cat parser/requirements.txt
+annotated-types==0.7.0
+argparse-addons==0.8.0
+attrs==22.1.0
+autopep8==2.0.1
+beautifultable==1.1.0
+bitstruct==8.15.1
+blinker==1.6.2
+canlib==1.25.393
+cantools==38.0.2
+certifi==2021.10.8
+charset-normalizer==2.0.12
+click==8.1.3
+colorama==0.4.5
+coverage==6.5.0
+DateTime==5.4
+diskcache==5.4.0
+Flask==2.3.2
+Flask-HTTPAuth==4.8.0
+idna==3.3
+influxdb-client==1.43.0
+iniconfig==1.1.1
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.2
+msgpack==1.0.5
+numpy==1.26.4
+packaging==21.3
+pluggy==1.0.0
+prettytable==3.8.0
+py==1.11.0
+pycodestyle==2.10.0
+pydantic==2.7.1
+pydantic_core==2.18.2
+pyparsing==3.0.9
+pyserial==3.5
+pytest==7.1.3
+pytest-cov==4.0.0
+pytest-cover==3.0.0
+pytest-coverage==0.0
+python-can==4.0.0
+python-dateutil==2.8.2
+python-dotenv==0.20.0
+pytz==2022.1
+PyYAML==6.0.1
+requests==2.27.1
+Rx==3.2.0
+six==1.16.0
+textparser==0.24.0
+toml==0.10.2
+tomli==2.0.1
+typing_extensions==4.11.0
+urllib3==1.26.9
+wcwidth==0.2.6
+websockets==11.0.3
+Werkzeug==2.3.4
+wrapt==1.14.1
+zope.interface==6.2
+grpcio==1.62
+protobuf==5.26.1
