--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,5 @@
 version: "3.9"
+
 services:
 
   nginx:
@@ -13,7 +14,7 @@ services:
         target: /etc/nginx/nginx.conf
         read_only: true
     restart: always
-  
+
   grafana:
     image: grafana/grafana-oss:9.5.2
     container_name: grafana
@@ -44,17 +45,20 @@ services:
       - INFLUX_BUCKET=${INFLUX_INIT_BUCKET}
 
   # New gRPC parser
-  parser_grpc:
+  cellular_parser:
     build:
       context: .
-      dockerfile: parser/Dockerfile   
+      dockerfile: parser/Dockerfile
     container_name: parser_grpc
     restart: unless-stopped
+
+    command: python -u /app/parser/cellular_parser.py
+
     environment:
       - DBC_FILE=/app/dbc/brightside.dbc
       - INFLUX_URL=${INFLUX_URL}          # e.g., http://influxdb:8086
       - INFLUX_ORG=${INFLUX_ORG}
-      - INFLUX_BUCKET=${INFLUX_INIT_BUCKET}
+      - INFLUX_BUCKET=CAN_test      # <-- force the bucket you want 
       - INFLUX_TOKEN=${INFLUX_TOKEN}
       - USE_NOW_TIME=${USE_NOW_TIME:-true}
       - POINT_BATCH_SIZE=${POINT_BATCH_SIZE:-1000}
@@ -62,12 +66,13 @@ services:
       - GRPC_BIND=${GRPC_BIND:-0.0.0.0:50051}
       - GRPC_MAX_WORKERS=8
       - GRPC_COMPRESSION=${GRPC_COMPRESSION:-gzip}
+
     ports:
       - "50051:50051"
+
     depends_on:
       - influxdb
 
-  
   parser:
     init: true
     build: .
@@ -76,10 +81,10 @@ services:
       - .:/sunlink
     ports:
       - 5000:5000
-    depends_on: 
+    depends_on:
       - nginx
     restart: always
-  
+
   influxdb:
     image: influxdb:2.7.1
     container_name: influxdb
