--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,13 +1,10 @@
-version: "3.9"
-
 services:
-
   nginx:
     image: nginx:latest
     container_name: nginx
     ports:
-      - 80:80
-      - 443:443
+      - "80:80"
+      - "443:443"
     volumes:
       - type: bind
         source: ./nginx/nginx.conf
@@ -19,7 +16,7 @@ services:
     image: grafana/grafana-oss:9.5.2
     container_name: grafana
     ports:
-      - 3000:3000
+      - "3000:3000"
     volumes:
       - grafana:/var/lib/grafana
       - type: bind
@@ -44,21 +41,19 @@ services:
       - INFLUX_ORG=${INFLUX_ORG}
       - INFLUX_BUCKET=${INFLUX_INIT_BUCKET}
 
-  # New gRPC parser
+  # gRPC cellular parser
   cellular_parser:
     build:
       context: .
       dockerfile: parser/Dockerfile
     container_name: parser_grpc
     restart: unless-stopped
-
     command: python -u /app/parser/cellular_parser.py
-
     environment:
       - DBC_FILE=/app/dbc/brightside.dbc
-      - INFLUX_URL=${INFLUX_URL}          # e.g., http://influxdb:8086
+      - INFLUX_URL=${INFLUX_URL}
       - INFLUX_ORG=${INFLUX_ORG}
-      - INFLUX_BUCKET=CAN_test      # <-- force the bucket you want 
+      - INFLUX_BUCKET=CAN_test
       - INFLUX_TOKEN=${INFLUX_TOKEN}
       - USE_NOW_TIME=${USE_NOW_TIME:-true}
       - POINT_BATCH_SIZE=${POINT_BATCH_SIZE:-1000}
@@ -66,13 +61,19 @@ services:
       - GRPC_BIND=${GRPC_BIND:-0.0.0.0:50051}
       - GRPC_MAX_WORKERS=8
       - GRPC_COMPRESSION=${GRPC_COMPRESSION:-gzip}
-
+      - PRINT_EVERY_SEC=${PRINT_EVERY_SEC:-5}
+      - FAIL_LOG_PATH=/app/logs/parser_failures.log
     ports:
       - "50051:50051"
-
+    volumes:
+      # so you can grab failure logs from the host
+      - type: bind
+        source: ./dbgfiles
+        target: /app/logs
     depends_on:
       - influxdb
 
+  # (optional) Flask parser UI you already had
   parser:
     init: true
     build: .
@@ -80,7 +81,7 @@ services:
     volumes:
       - .:/sunlink
     ports:
-      - 5000:5000
+      - "5000:5000"
     depends_on:
       - nginx
     restart: always
@@ -89,7 +90,7 @@ services:
     image: influxdb:2.7.1
     container_name: influxdb
     ports:
-      - 8086:8086
+      - "8086:8086"
     volumes:
       - influxdb-storage:/var/lib/influxdb2
       - influxdb-config:/etc/influxdb2
@@ -110,3 +111,4 @@ volumes:
   grafana:
   influxdb-storage:
   influxdb-config:
+
